# airflow_project

./: .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  elt_script.py  pyproject.toml
airflow_src/dags/: elt_dag.py
custom_postgres/macros/: film_ratings_macro.sql  ratings_macro.sql
custom_postgres/models/example/: actors.sql  film_ratings.sql  specific_movie.sql
elt/: Dockerfile  elt_script.py
