[tool.poetry]
name = "airflow-project"
version = "0.1.0"
description = ""
authors = ["Sayanta Roychowdhury <sayanta2009@yahoo.co.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dbt-core = "^1.8.2"
pre-commit = "^3.7.1"
python-dotenv = "^1.0.1"
cryptography = "^42.0.8"

[tool.poetry.group.dev.dependencies]
dbt-postgres = "^1.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
